tests/snapshots/formats__pcd__ascii.pcd.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ ascii.pcd — PCD v0.7, 3 point(s) (x y z rgb), ascii  [0x0+0xe9]
    Comment: ".PCD v0.7 - Point Cloud Data file format"  [0x0+0x2a]
    VERSION: "0.7"  [0x2b+0xb]
    FIELDS: "x y z rgb"  [0x37+0x10]
    SIZE: "4 4 4 4"  [0x48+0xc]
    TYPE: "F F F U"  [0x55+0xc]
    COUNT: "1 1 1 1"  [0x62+0xd]
    WIDTH: 3  [0x70+0x7]
    HEIGHT: 1  [0x78+0x8]
    VIEWPOINT: "0 0 0 1 0 0 0"  [0x81+0x17]
    POINTS: 3  [0x99+0x8]
    DATA: "ascii"  [0xa2+0xa]
  ▾ Data — 3 point(s), ascii  [0xad+0x3c]
      Point 0: "x=0.1 y=0.2 z=0.3 rgb=4278190335"  [0xad+0x16]
      Point 1: "x=1.5 y=-2 z=0 rgb=4278255360"  [0xc4+0x13]
      Point 2: "x=3 y=3 z=3 rgb=4294901760"  [0xd8+0x10]
