tests/snapshots/formats__pcd__binary.pcd.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ binary.pcd — PCD v0.7, 3 point(s) (x y z rgb), binary  [0x0+0xde]
    Comment: ".PCD v0.7 - Point Cloud Data file format"  [0x0+0x2a]
    VERSION: "0.7"  [0x2b+0xb]
    FIELDS: "x y z rgb"  [0x37+0x10]
    SIZE: "4 4 4 4"  [0x48+0xc]
    TYPE: "F F F U"  [0x55+0xc]
    COUNT: "1 1 1 1"  [0x62+0xd]
    WIDTH: 3  [0x70+0x7]
    HEIGHT: 1  [0x78+0x8]
    VIEWPOINT: "0 0 0 1 0 0 0"  [0x81+0x17]
    POINTS: 3  [0x99+0x8]
    DATA: "binary"  [0xa2+0xb]
  ▾ Data — 3 point(s), binary  [0xae+0x30]
      Point 0: "x=0 y=-0 z=2 rgb=4278190335"  [0xae+0x10]
      Point 1: "x=0.5 y=-1 z=2 rgb=4278190336"  [0xbe+0x10]
      Point 2: "x=1 y=-2 z=2 rgb=4278190337"  [0xce+0x10]
